# wombat

./: .bazelrc  .gitignore  .travis.yml  BUILD.bazel  Cargo.toml  LICENSE  README.md  WORKSPACE
broker/: .gitignore  BUILD  BUILD.bazel  Cargo.toml  Makefile
broker/broker/: BUILD.bazel
broker/broker/include/broker/: router.h
broker/broker/src/: conf.cc  main.cc
broker/broker/tests/data/: WOMBATLEADER.conf  WOMBATREPLICA1.conf  WOMBATREPLICA2.conf
broker/broker/tests/unit/: conf_test.cc  router_test.cc
broker/ci/: buildspec.yml
broker/ci/env/: Dockerfile
broker/client/: Cargo.toml  go.mod
broker/client/examples/: consumer.rs  producer.rs
broker/client/pkg/consumer/: BUILD.bazel
broker/client/pkg/producer/: BUILD.bazel  producer.go
broker/client/pkg/record/: message.go  record.go  record_test.go  statresponse_test.go
broker/client/src/: consumer.rs  lib.rs  partition.rs
broker/client/src/partition/: connection.rs  route.rs  router.rs
broker/connection/: BUILD.bazel
broker/connection/include/connection/: connection.h  connectionexception.h  socket.h  streamsocket.h
broker/connection/src/: connection.cc  event.cc  streamsocket.cc
broker/connection/tests/unit/: connection_test.cc
broker/core/src/packet/: consumerequest.rs  types.rs
broker/frame/include/frame/: frame.h  utils.h
broker/frame/src/: messageheader.cc  offset.cc  record.cc
broker/frame/tests/unit/: message_test.cc  messageheader_test.cc  offset_test.cc
broker/include/broker/: broker.h  conf.h  router.h
broker/log/: BUILD.bazel  Cargo.toml
broker/log/include/log/: logexception.h  segment.h  systemlog.h
broker/log/src/: lib.rs  log.rs  offsets.cc  offsetstore.rs  result.rs  segment.rs  systemsegment.cc  tempdir.cc
broker/log/tests/unit/: offset_test.cc
broker/partition/: BUILD.bazel
broker/partition/src/: consumehandler.cc  handler.cc  lib.rs  router.cc  stathandler.cc
broker/segments/: 0.seg
broker/server/: BUILD.bazel
broker/server/src/: lib.rs  main.rs  responder.cc  serverexception.cc
broker/src/: broker.cpp  broker.rs  conf.cc  connection.rs  lib.rs  log.rs  main.cc  main.cpp  main.rs  message.rs  result.rs  router.cc  router.cpp  server.rs  storage.rs
broker/src/log/: filesegment.rs  header.rs  log.rs  logheader.rs  logstore.rs  offsets.rs  record.rs  result.rs  segment.rs  store.rs
broker/src/message/: header.rs  result.rs  types.rs
broker/src/partition/: partition.rs
broker/src/server/: connection.rs  result.rs  server.rs
broker/src/storage/: filesegment.rs  log.rs  logheader.rs  logstore.rs  segment.rs
broker/tests/data/: WOMBATLEADER.conf
broker/tests/tests/: endtoend.rs
broker/tests/unit/: conf_test.cc  conf_test.cpp  router_test.cc
broker/util/: BUILD.bazel
client/pkg/consumer/: BUILD  BUILD.bazel  connection.go  consumer.go  consumerregistry.go  consumerregistry_test.go  coordinator.go  offsets.go  offsets_test.go  partition.go  zookeeper.go
client/pkg/producer/: BUILD  BUILD.bazel  connection.go  loadbalancer.go  producer.go
client/pkg/record/: BUILD  BUILD.bazel  consumerecord.go  consumerequest.go  consumerequest_test.go  message.go  message_test.go  producerecord.go  producerecord_test.go  record_test.go  recordrequest.go  requestrecord_test.go  statresponse.go
connection/: BUILD  BUILD.bazel
connection/include/connection/: connection.h  connectionexception.h  event.h  socket.h  streamsocket.h
connection/src/: connection.cc  connectionexception.cc  streamsocket.cc
connection/tests/unit/: connection_test.cc
event/: BUILD  BUILD.bazel
event/include/event/: connection.h  event.h  responder.h
event/src/: connection.cc  event.cc  responder.cc
frame/: BUILD  BUILD.bazel
frame/include/frame/: frame.h  message.h  messageheader.h  offset.h  record.h  recordrequest.h  statresponse.h  utils.h
frame/src/: message.cc  messageheader.cc  offset.cc  record.cc  recordrequest.cc  statresponse.cc  utils.cc
frame/tests/unit/: message_test.cc  messageheader_test.cc  offset_test.cc  record_test.cc  recordrequest_test.cc  statresponse_test.cc  utils_test.cc
log2/: Cargo.toml
log2/src/: inmemorysegment.rs  lib.rs  log.rs  result.rs  segment.rs  systemsegment.rs
partition/: .gitignore  BUILD  BUILD.bazel  Cargo.toml  Makefile  README.md
partition/include/log/: connection.h  framing.h  leader.h  log.h  logexception.h  offsets.h  partition.h  replica.h  systemsegment.h
partition/include/partition/: connection.h  consumehandler.h  event.h  handler.h  leader.h  leaderpartition.h  listener.h  partition.h  producehandler.h  replica.h  replicapartition.h  router.h  stathandler.h  syncer.h
partition/include/tmp/: log.h
partition/src/: connection.cpp  consumehandler.cc  event.cc  handler.cc  id.rs  inmemorysegment.cpp  leader.cc  leader.cpp  lib.rs  listener.cpp  main.cpp  partition.cc  partition.cpp  partition.rs  producehandler.cc  replica.cc  replica.cpp  result.rs  router.cc  segment.cpp  stathandler.cc
partition/src/log/: .result.rs.swp  record.rs
partition/tests/: README.md  inmemorysegment_unittest.cpp  leader_unittest.cpp  log_unittest.cpp  offset_unittest.cpp  partition_unittest.cpp  segment_unittest.cpp  systemsegment_integrationtest.cpp  tempdir.h
partition/tests/component/: leader_test.cpp  replica_test.cpp
partition/tests/harness/: .gitignore  README.md  leader.py  main.py
partition/tests/integration/: leader_test.cpp  replica_test.cpp  systemsegment_test.cpp
partition/tests/unit/: consumehandler_test.cc  inmemorysegment_test.cpp  partition_test.cpp  producehandler_test.cc  router_test.cc  stathandler_test.cc
server/: .dockerignore  .gitignore  BUILD  BUILD.bazel  Cargo.toml  Makefile
server/include/server/: connection.h  event.h  responder.h  server.h  serverexception.h  tcpconnection.h
server/src/: connection.cc  connection.cpp  event.cc  event.cpp  lib.rs  listener.cc  main.rs  responder.cc  responder.cpp  server.cc  server.cpp  serverexception.cpp  tcpconnection.cc
server/src/server/: connection.rs  server.rs
server/tests/integration/: responder_test.cc  server_test.cc  server_test.cpp
(+249 files in other folders)
