cc_library(
    name = "broker",
    srcs = glob(
        ["src/*.cc"],
        exclude = ["src/main.cc"],
    ),
    hdrs = glob(["include/broker/*.h"]),
    strip_include_prefix = "include/",
    deps = [
        "//event",
        "//frame",
        "//log",
        "//partition",
        "//server",
        "//util",
    ],
)

cc_binary(
    name = "wombat-broker",
    srcs = ["src/main.cc"],
    linkopts = ["-pthread"],
    deps = [
        ":broker",
        "@glog",
    ],
)

cc_test(
    name = "broker-test",
    srcs = glob(["tests/unit/*.cc"]),
    copts = ["-Iexternal/gtest/include"],
    deps = [
        ":broker",
        "//partition:partition-mock",
        "@gtest//:gtest_main",
    ],
)
