cc_library(
    name = "connection",
    srcs = glob(["src/*.cc"]),
    hdrs = glob(["include/connection/*.h"]),
    linkopts = ["-lstdc++fs"],
    strip_include_prefix = "include/",
    visibility = ["//visibility:public"],
    deps = [
        "//frame",
        "//util",
        "@glog",
    ],
)

cc_library(
    name = "connection-mock",
    srcs = glob(["tests/mock/*.cc"]),
    hdrs = glob(["tests/mock/connection/*.h"]),
    linkopts = ["-lstdc++fs"],
    strip_include_prefix = "tests/mock/",
    visibility = ["//visibility:public"],
    deps = [
        "@gtest",
    ],
)

cc_test(
    name = "connection-unit-test",
    srcs = glob(["tests/unit/*.cc"]),
    copts = ["-Iexternal/gtest/include"],
    deps = [
        ":connection",
        ":connection-mock",
        "@gtest//:gtest_main",
    ],
)

cc_test(
    name = "connection-integration-test",
    srcs = glob(["tests/integration/*.cc"]),
    copts = ["-Iexternal/gtest/include"],
    deps = [
        ":connection",
        "@gtest//:gtest_main",
    ],
)
