cc_library(
    name = "event",
    srcs = glob(["src/*.cc"]),
    hdrs = glob(["include/event/*.h"]),
    linkopts = ["-lstdc++fs"],
    strip_include_prefix = "include/",
    visibility = ["//visibility:public"],
    deps = [
        "//frame",
        "//util",
    ],
)

cc_test(
    name = "event-test",
    srcs = glob(["tests/unit/*.cc"]),
    copts = ["-Iexternal/gtest/include"],
    deps = [
        ":event",
        "@gtest//:gtest_main",
    ],
)
