cc_library(
    name = "frame",
    srcs = glob(["src/*.cc"]),
    hdrs = glob(["include/frame/*.h"]),
    strip_include_prefix = "include/",
    visibility = ["//visibility:public"],
)

cc_test(
    name = "frame-test",
    srcs = glob(["tests/unit/*.cc"]),
    copts = ["-Iexternal/gtest/include"],
    deps = [
        ":frame",
        "@gtest//:gtest_main",
    ],
)
