[package]
name = "log2"
version = "0.1.0"
authors = ["Andy Dunstall <andydunstall@hotmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.33"
byteorder = "1"
lazy_static = "1.4.0"
regex = "1"
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
rand = "0.7.3"
tempdir = "0.3"
