cc_library(
    name = "partition",
    srcs = glob(["src/*.cc"]),
    hdrs = glob(["include/partition/*.h"]),
    linkopts = ["-lstdc++fs"],
    strip_include_prefix = "include/",
    visibility = ["//visibility:public"],
    deps = [
        "//event",
        "//frame",
        "//log",
        "//util",
        "@glog",
    ],
)

cc_test(
    name = "partition-test",
    srcs = glob(["tests/unit/*.cc"]),
    copts = ["-Iexternal/gtest/include"],
    deps = [
        ":partition",
        "@gtest//:gtest_main",
    ],
)
