[package]
name = "wombatpartition"
version = "0.1.0"
authors = ["Andy Dunstall <andydunstall@hotmail.com>"]
edition = "2018"

[dependencies]
wombatcore = { path = "../core" }
wombatlog = { path = "../log" }
crc = "1.8.1"
tokio = { version = "0.2", features = ["full"] }  # TODO(AD)

[dev-dependencies]
rand = "0.7.3"
tempdir = "0.3"
