cc_library(
    name = "server",
    srcs = glob(["src/*.cc"]),
    hdrs = glob(["include/server/*.h"]),
    strip_include_prefix = "include/",
    visibility = ["//visibility:public"],
    deps = [
        "//connection",
        "//frame",
        "//util",
        "@glog",
    ],
)

cc_test(
    name = "server-integration-test",
    srcs = glob(["tests/integration/*.cc"]),
    copts = ["-Iexternal/gtest/include"],
    deps = [
        ":server",
        "@gtest//:gtest_main",
    ],
)
