cc_library(
    name = "log",
    srcs = glob(["src/*.cc"]),
    hdrs = glob(["include/log/*.h"]),
    linkopts = ["-lstdc++fs"],
    strip_include_prefix = "include/",
    visibility = ["//visibility:public"],
    deps = [
        "@glog",
    ],
)

cc_library(
    name = "mock-log",
    srcs = glob(["tests/mock/*.cc"]),
    hdrs = glob(["tests/mock/log/*.h"]),
    linkopts = ["-lstdc++fs"],
    strip_include_prefix = "tests/mock/",
    visibility = ["//visibility:public"],
    deps = [
        "@gtest",
    ],
)

cc_test(
    name = "log-test",
    srcs = glob(["tests/unit/*.cc"]),
    copts = ["-Iexternal/gtest/include"],
    deps = [
        ":log",
        "@gtest//:gtest_main",
    ],
)

cc_test(
    name = "log-integration-test",
    srcs = glob(["tests/integration/*.cc"]),
    copts = ["-Iexternal/gtest/include"],
    deps = [
        ":log",
        "@gtest//:gtest_main",
    ],
)
