cc_library(
    name = "partition",
    srcs = glob(["src/*.cc"]),
    hdrs = glob(["include/partition/*.h"]),
    linkopts = ["-lstdc++fs"],
    strip_include_prefix = "include/",
    visibility = ["//visibility:public"],
    deps = [
        "//broker/connection",
        "//broker/frame",
        "//broker/log",
        "//broker/server",  # TODO(AD) Remove
        "//broker/util",
        "@glog",
    ],
)

cc_library(
    name = "partition-mock",
    srcs = glob(["tests/mock/*.cc"]),
    hdrs = glob(["tests/mock/partition/*.h"]),
    linkopts = ["-lstdc++fs"],
    strip_include_prefix = "tests/mock/",
    visibility = ["//visibility:public"],
    deps = [
        "@gtest",
    ],
)

cc_test(
    name = "partition-test",
    srcs = glob(["tests/unit/*.cc"]),
    copts = ["-Iexternal/gtest/include"],
    deps = [
        ":partition",
        ":partition-mock",
        "//broker/log:mock-log",
        "@gtest//:gtest_main",
    ],
)
