load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "consumerecord.go",
        "consumerequest.go",
        "producerecord.go",
    ],
    importpath = "github.com/dunstall/wombat/client/pkg/record",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "consumerecord_test.go",
        "consumerequest_test.go",
        "producerecord_test.go",
    ],
    embed = [":go_default_library"],
)
