load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["conf.go"],
    importpath = "github.com/dunstall/wombat/client/pkg/consumer/conf",
    visibility = ["//visibility:public"],
    deps = ["@in_gopkg_ini_v1//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["conf_test.go"],
    embed = [":go_default_library"],
)
