load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "registry.go",
        "zkregistry.go",
    ],
    importpath = "github.com/dunstall/wombat/client/pkg/consumer/registry",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@com_github_samuel_go_zookeeper//zk:go_default_library",
    ],
)
